# python-rrta

./: README.md  example.py  pyproject.toml
src/rrta/: __init__.py  adapter.py  client.py  exceptions.py
src/rrta/models/: __init__.py  messages.py  result.py  route.py  routedetails.py  stopdepartures.py  stops.py  vehicles.py
